Add about modal

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,8 +1,8 @@
 @import "~leaflet/dist/leaflet.css";
+@import "~leaflet-modal/dist/leaflet.modal.css";
 
 @import "variables";
 @import "~bulma";
-@import "~bulma-switch";
 
 html, body {
   margin: 0;
