--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -1,6 +1,23 @@
-<div class="about">
-  <h2>Oregon watersheds <span style="font-size: small;"><b>{{{version}}}</b></span></h2>
-  <h3>About this site</h3>
+<div class="about content">
+  <h3>Oregon surface drinking water watersheds <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
+
+  <div class="notification is-warning">
+    <span class="is-size-5"><b>Important:</b></span><br>
+    This site is currently under development and it is not ready for public use. Data are still in the process of being compiled and validated.
+  </div>
+
+  <h4>About this site</h4>
+
+  <p>This site is an interactive map that can be used to visualize Oregon's drinking water watersheds and to discover the populations connected to a user selected location on the map.</p>
+  <p>A set of basemaps and overlays are available to customize the view.</p>
+
+  <h4>Data Sources</h4>
+  <ul>
+    <li>Oregon Deparment of Environmental Quality (DEQ), <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">Surface water drinking water source areas in Oregon</a></li>
+    <li>Oregon Health Authority, <a href="https://yourwater.oregon.gov/index.html" target="_blank">Drinking water data online</a></li>
+    <li>Portland State University, <a href="https://www.pdx.edu/population-research/population-estimate-reports" target="_blank">Oregon population estimate reports</a></li>
+    <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
+  </ul>
 
   <div>
     <div style="display: inline-block;"><a href="https://oregonhowl.org/" target="_blank"><img src="../images/howlmoonblack.svg" style="height: 50px"></a></div>
