--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -19,6 +19,8 @@
     <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
   </ul>
 
+  <p>This project is open source and uses open data.</p>
+
   <div>
     <div style="display: inline-block;"><a href="https://oregonhowl.org/" target="_blank"><img src="../images/howlmoonblack.svg" style="height: 50px"></a></div>
     <div style="display: inline-block; position: relative; bottom: 10px;">This is a <a href="https://morinricardo.com/" target="_blank">volunteer</a> project made for <a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>.<br></div>
