Add collapsible for item details

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,6 +9,8 @@
 @import "~bulma/sass/elements/notification.sass";
 @import "~bulma/sass/components/panel.sass";
 
+@import '~@creativebulma/bulma-collapsible';
+
 html, body {
   margin: 0;
   height: 100%;
