--- a/src/templates/populationItem.hbs
+++ b/src/templates/populationItem.hbs
@@ -1,1 +1,4 @@
-<div class="panel-block">{{provider}} ({{population}})</div>
+<a href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse">{{provider}} ({{population}})</a>
+<div id="population-item-{{row}}" class="is-collapsible">
+  <div class="panel-block">here goes some detail</div>
+</div>
