Add info to panel

--- a/src/templates/populationItem.hbs
+++ b/src/templates/populationItem.hbs
@@ -3,7 +3,9 @@
   <a id="population-item-{{row}}-angle" href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse"><i class="fa-solid fa-angle-down"></i></a>
 </div>
 <div id="population-item-{{row}}" class="is-collapsible">
-  <ul class="panel-block">
-    <li>here goes some detail</li>
-  <ul>
+  <ul style="padding-left: 9px; padding-right: 9px;">
+    <li><span class="has-text-weight-semibold">City:</span> {{city}}</li>
+    <li><span class="has-text-weight-semibold">Source:</span> {{source}}</li>
+    <li><span class="has-text-weight-semibold">Subbasin:</span> {{subbasin}}</li>
+  </ul>
 </div>
