Highlight selected watershed

--- a/src/templates/populationItem.hbs
+++ b/src/templates/populationItem.hbs
@@ -1,5 +1,5 @@
 <div class="is-flex is-justify-content-space-between">
-  <a href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse">{{provider}} ({{population}})</a>
+  <a href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse"><span {{#if isFirst}}style="text-decoration: underline dotted;"{{/if}}>{{provider}} ({{population}})<span></a>
   <a id="population-item-{{row}}-angle" href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse"><i class="fa-solid fa-angle-down"></i></a>
 </div>
 <div id="population-item-{{row}}" class="is-collapsible">
