--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -21,6 +21,12 @@
     <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
   </ul>
 
+  <small><b>Notes about data quality:</b>
+    <p>Coming soon...</p>
+    <br><br><br>
+
+  </small>
+
   <p>This project is open source and uses open data.</p>
 
   <div>
