Changes per email 9/21

--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -1,5 +1,5 @@
 <div class="about content">
-  <h3>Oregon surface drinking water sources <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
+  <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
 
   <div class="notification is-warning">
     <span class="is-size-5"><b>Important:</b></span><br>
@@ -8,7 +8,7 @@
 
   <h4>About this site</h4>
 
-  <p>This site is an interactive map that can be used to visualize Oregon's surface drinking water sources and to discover the populations connected, through shared watersheds, to a user-selected location on the map.</p>
+  <p>This site is an interactive map that can be used to visualize Oregon's surface drinking water sources and to discover the populations connected by way of shared watersheds to a user-selected location on the map.</p>
   <p>A set of basemaps and overlays are available to customize the view.</p>
 
   <h4>Data Sources</h4>
