--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -61,3 +61,14 @@ html, body {
   text-align: center;
   font-size: 14px;
 }
+
+.leaflet-modal .welcome {
+  background-image: url('../images/message.jpg');
+  background-size:  cover;
+  background-color: rgba(255,255,255,0);
+  color: #fff5d0;
+  text-shadow: 1px 1px #000000;
+  text-align: center;
+  margin-top: 0%;
+  /*transition: margin 0s;*/
+}
