--- a/src/templates/aboutControl.hbs
+++ b/src/templates/aboutControl.hbs
@@ -1,1 +1,1 @@
-<a id="aboutControl" style="font-size: x-large; font-weight: bold;" href="#" title="{{about}}">&#9432;</a>
+<a id="aboutControl" class="about-control" href="#" title="{{about}}">&#9432;</a>
