--- a/src/templates/welcomeModal.hbs
+++ b/src/templates/welcomeModal.hbs
@@ -1,6 +1,6 @@
 <div class="content">
   <br>
-  <h1 style="color: #fff5d0; text-stroke: 3px #000000;">Oregon Drinking Watersheds</h1>
+  <h1 style="color: #fff5d0; text-shadow: 2px 2px #000000;">Oregon Drinking Watersheds</h1>
   <br><br><br><br><br><br>
   <h3 style="color: #fff5d0; text-shadow: 2px 2px #000000;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
   <br><br>
