Enable welcome modal

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -91,3 +91,11 @@ html, body {
 .reset-control {
   font-size: large;
 }
+
+.license-link {
+  color: white !important;
+}
+
+.license-link:hover {
+  color: #0078A8 !important;
+}
