--- a/src/templates/welcomeModal.hbs
+++ b/src/templates/welcomeModal.hbs
@@ -2,10 +2,10 @@
   <br>
   <h1 style="color: #fff5d0; text-shadow: 2px 2px #000000;">Oregon Drinking Watersheds</h1>
   <br><br><br><br><br><br>
-  <h3 style="color: #fff5d0; text-shadow: 2px 2px #000000;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h3>
+  <h3 style="color: #fff5d0; text-shadow: 2px 2px #000000;">Discover Oregon populations and communities connected<br>through shared drinking water sources.</h3>
   <br><br>
   <div>
     <label><input type="checkbox" id="welcome-optout"><i>Do not show this again</i></label>
   </div>
-  <div style="text-align: right;"><small>Image: Finetooth <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA 3.0</a></small></div>
+  <div style="text-align: right;"><small>Image: Finetooth <a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">CC BY-SA 3.0</a></small></div>
 </div>
