--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -1,16 +1,12 @@
 <div class="about content">
   <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
-
   <div class="notification is-warning">
     <span class="is-size-5"><b>Important:</b></span><br>
     This site is currently under development and it is not ready for public use. Data are still in the process of being compiled and validated.
   </div>
-
   <h4>About this site</h4>
-
-  <p>This site is an interactive map that can be used to visualize Oregon's surface drinking water sources and to discover the populations connected by way of shared watersheds to a user-selected location on the map.</p>
+  <p>This site is an interactive map that can be used to visualize Oregon's surface drinking water sources and to discover the populations and communities connected by way of shared watersheds to a user-selected location on the map.</p>
   <p>A set of basemaps and overlays are available to customize the view.</p>
-
   <h4>Data Sources</h4>
   <ul>
     <li>Oregon Deparment of Environmental Quality (DEQ), <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">Surface water drinking water source areas in Oregon</a></li>
@@ -20,15 +16,11 @@
     <li>Portland State University, <a href="https://www.pdx.edu/population-research/population-estimate-reports" target="_blank">Oregon population estimate reports</a></li>
     <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
   </ul>
-
   <small><b>Notes about data quality:</b>
-    <p>Coming soon...</p>
-    <br><br><br>
-
+    <p>Mapping drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map". This was particularly complex to do and avoiding double counting populations. No populations are double counted on this map. This layer heavily relies on the original mapping by <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">DEQ</a>, however there are a handful of instances where they didn't map the full extent of a community watershed and we have modified to do so. If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
   </small>
-
+  <br>
   <p>This project is open source and uses open data.</p>
-
   <div>
     <div style="display: inline-block;"><a href="https://oregonhowl.org/" target="_blank"><img src="../images/howlmoonblack.svg" style="height: 50px"></a></div>
     <div style="display: inline-block; position: relative; bottom: 10px;">This is a <a href="https://morinricardo.com/" target="_blank">volunteer</a> project made for <a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>.<br></div>
