Small text edits

--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -17,7 +17,8 @@
     <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
   </ul>
   <small><b>Notes about data quality:</b>
-    <p>Mapping drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map". This was particularly complex to do and avoiding double counting populations. No populations are double counted on this map. This layer heavily relies on the original mapping by <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">DEQ</a>, however there are a handful of instances where they didn't map the full extent of a community watershed and we have modified to do so. If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
+    <br>
+    <p>Mapping drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map." This was particularly complex to do while avoiding double counting populations. No populations are double counted on this map.</p><p>This layer heavily relies on the original mapping by <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">DEQ</a>, however there are a handful of instances where they didn't map the full extent of a community watershed and we have modified it to do so.</p><p>If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
   </small>
   <br>
   <p>This project is open source and uses open data.</p>
