--- a/src/templates/populationItem.hbs
+++ b/src/templates/populationItem.hbs
@@ -1,4 +1,4 @@
-<div class="is-flex is-justify-content-space-between">
+<div class="is-flex is-justify-content-space-between" style="font-size: 0.8rem;">
   <a href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse"><span {{#if isUnderlined}}class="text-dotted-underline"{{/if}}>{{city}} ({{population}})<span></a>
   <a id="population-item-{{row}}-angle" href="#population-item-{{row}}" class="panel-block has-text-weight-semibold" data-action="collapse"><i class="fa-solid fa-angle-down"></i></a>
 </div>
