--- a/src/templates/resetControl.hbs
+++ b/src/templates/resetControl.hbs
@@ -1,1 +1,1 @@
-<a id="resetControl" class="reset-control" href="#" title="{{title}}"><i class="fa-solid fa-arrows-rotate"></i></a>
+<a id="resetControl" class="reset-control" title="{{title}}"><i class="fa-solid fa-arrows-rotate"></i></a>
