--- a/src/templates/legend.hbs
+++ b/src/templates/legend.hbs
@@ -1,4 +1,4 @@
-<div class="legend-scale has-text-centered is-size-7">
+<div class="legend">
   <b>Legend</b>
   <ul class="legend-items">
     <li><span class="legend-item" style="opacity: {{opacity}}; background: {{allFillColor}}; border-style: solid; border-width: 1px; border-color: {{allBorderColor}};"></span>All</li>
