--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -140,6 +140,11 @@ ul.legend-items li span {
   width: 60px;
 }
 
+#opacity-slider {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .opacity-slider-label {
   @extend .has-text-centered;
   @extend .is-size-7;
