--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -5,7 +5,7 @@
     This site is currently under development and it is not ready for public use. Data are still in the process of being compiled and validated.
   </div>
   <h4>About this site</h4>
-  <p>This site is an interactive map that can be used to visualize Oregon's surface drinking water sources and to discover the populations and communities connected by way of shared watersheds to a user-selected location on the map.</p>
+  <p>This site is an interactive map for visualizing Oregon's surface drinking water sources. By picking a spot on the map, users can discover interconnected populations and communities by way of common drinking watersheds.</p>
   <p>A set of basemaps and overlays are available to customize the view.</p>
   <h4>Data Sources</h4>
   <ul>
