Updates to About & Welcome

--- a/src/templates/welcomeModal.hbs
+++ b/src/templates/welcomeModal.hbs
@@ -7,5 +7,5 @@
   <div>
     <label><input type="checkbox" id="welcome-optout"><i>Do not show this again</i></label>
   </div>
-  <div style="text-align: right;"><small>Image: Finetooth <a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">CC BY-SA 3.0</a></small></div>
+  <div style="text-align: right;"><small><a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">&nbsp;Finetooth CC BY-SA 3.0</a></small></div>
 </div>
