--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -1,24 +1,25 @@
 <div class="about content">
   <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
-  <div class="notification is-warning">
-    <span class="is-size-5"><b>Important:</b></span><br>
-    This site is currently under development and it is not ready for public use. Data are still in the process of being compiled and validated.
+  <div>
+    <img style="width: 100%; height: 240px; object-fit: cover;" src="../images/message.jpg">
+    <div style="margin-top: -25px; text-align: right;"><small><a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">&nbsp;Finetooth CC BY-SA 3.0</a></small></div>
   </div>
+  <br>
   <h4>About this site</h4>
-  <p>This site is an interactive map for visualizing Oregon's surface drinking water sources. By picking a spot on the map, users can discover interconnected populations and communities by way of common drinking watersheds.</p>
+  <p>This site is an interactive map for visualizing Oregon's surface drinking water sources. Picking a spot on the map, users can discover interconnected populations and communities by way of common drinking watersheds.</p>
   <p>A set of basemaps and overlays are available to customize the view.</p>
-  <h4>Data Sources</h4>
+  <h4>Data Sources<span class="is-size-7 has-text-weight-normal"> (As of October 8, 2022)</span></h4>
   <ul>
     <li>Oregon Deparment of Environmental Quality (DEQ), <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">Surface water drinking water source areas in Oregon</a></li>
-    <li>Bureau of Land Management (BLM), <a href="https://databasin.org/datasets/f8b3f76a7ccc46ee9db67761d9522003/">Watershed Boundaries Oregon</a></li>
-    <li>Oregon DEQ, <a href="https://arcgis.deq.state.or.us/arcgis/rest/services/WQ/OregonHydro/MapServer/0">Oregon Hydrography</a></li>
+    <li>Oregon Spatial Data Library, <a href="https://spatialdata.oregonexplorer.info/geoportal/details;id=4b1b008d5a764a209b2df040689c0779" target="_blank">Oregon Watershed Boundary Dataset</a></li>
+    <li>Oregon DEQ, <a href="https://arcgis.deq.state.or.us/arcgis/rest/services/WQ/OregonHydro/MapServer/0" target="_blank">Oregon Hydrography</a></li>
     <li>Oregon Health Authority, <a href="https://yourwater.oregon.gov/index.html" target="_blank">Drinking water data online</a></li>
     <li>Portland State University, <a href="https://www.pdx.edu/population-research/population-estimate-reports" target="_blank">Oregon population estimate reports</a></li>
     <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
   </ul>
   <small><b>Notes about data quality:</b>
     <br>
-    <p>Mapping populations to drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map." This was particularly complex to do while avoiding double counting populations. No populations are double counted on this map.</p><p>This layer heavily relies on the original mapping by <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">DEQ</a>, however there are a handful of instances where they didn't map the full extent of a community watershed and we have modified it to do so.</p><p>If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
+    <p>Mapping populations to drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map." This was particularly complex to do while avoiding double counting populations. No populations are double counted on this map.</p><p>This layer heavily relies on the original mapping by <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">DEQ</a>, however there are several instances where they didn't map the full extent of a community watershed and we have modified it to do so.</p><p>If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
   </small>
   <br>
   <p>This project is open source and uses open data.</p>
