--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -2,7 +2,7 @@
   <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
   <div>
     <img style="width: 100%; height: 240px; object-fit: cover;" src="../images/message.jpg">
-    <div style="margin-top: -25px; text-align: right;"><small><a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">&nbsp;Finetooth CC BY-SA 3.0</a></small></div>
+    <div style="margin-top: -25px; padding-right: 8px; text-align: right;"><small><a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">&nbsp;Finetooth CC BY-SA 3.0</a></small></div>
   </div>
   <br>
   <h4>About this site</h4>
