--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -6,8 +6,9 @@
   </div>
   <br>
   <h4>About this site</h4>
-  <p>This site is an interactive map for visualizing Oregon's surface drinking water sources. Picking a spot on the map, users can discover interconnected populations and communities by way of common drinking watersheds.</p>
-  <p>A set of basemaps and overlays are available to customize the view.</p>
+  <p>This site is an interactive map for visualizing Oregon's <u>surface</u> drinking water sources (i.e., water from rivers, streams and lakes), which serve about two-thirds of Oregonians.</p>
+  <p>Pick a spot on the map to discover interconnected populations and communities by way of common drinking watersheds. Use the provided basemaps and overlays to customize the view.</p>
+  <p>Groundwater sources (i.e., water sourced from deep wells and aquifers) are <u>not</u> included in this map.</p>
   <h4>Data Sources<span class="is-size-7 has-text-weight-normal"> (As of October 8, 2022)</span></h4>
   <ul>
     <li>Oregon Deparment of Environmental Quality (DEQ), <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">Surface water drinking water source areas in Oregon</a></li>
