--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,10 @@
 @import "~leaflet/dist/leaflet.css";
 @import "~leaflet-modal/dist/leaflet.modal.css";
 
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+
 @import "variables";
 @import "~bulma/sass/base/_all.sass";
 @import "~bulma/sass/helpers/_all.sass";
