--- a/src/templates/resetControl.hbs
+++ b/src/templates/resetControl.hbs
@@ -1,1 +1,3 @@
-<a id="resetControl" class="reset-control" title="{{title}}"><i class="fa-solid fa-arrows-rotate"></i></a>
+<a id="resetControl" class="reset-control" title="{{title}}">
+  <img style="margin-top: 6px;" width="60%" src="{{iconRefresh}}">
+</a>
