--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,6 +39,10 @@ html, body {
   color: gray;
 }
 
+.leaflet-control-attribution {
+  max-width: 70%;
+}
+
 .info-panel {
     background: rgba(255,255,255,0.8);
     border-radius: 3px;
