--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,8 +39,10 @@ html, body {
   color: gray;
 }
 
-.leaflet-control-attribution {
-  /* max-width: 70%; */
+@media only screen and (max-width: 600px) {
+  .leaflet-control-attribution {
+    max-width: 70%;
+  }
 }
 
 .info-panel {
