--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -43,6 +43,15 @@ html, body {
   .leaflet-control-attribution {
     max-width: 70%;
   }
+  .info-panel {
+    max-height: calc(100% - 90px) !important;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .info-panel {
+    max-height: calc(100% - 105px) !important;
+  }
 }
 
 .info-panel {
@@ -55,7 +64,8 @@ html, body {
     right: 10px;
     z-index: 1000;
     max-width: 50%;
-    max-height: 100%;
+    /*max-height: 100%; */
+    max-height: calc(100% - 80px);
     overflow: auto;
 }
 
