--- a/src/templates/legend.hbs
+++ b/src/templates/legend.hbs
@@ -1,8 +1,23 @@
 <div class="legend">
   <b>Legend</b>
   <ul class="legend-items">
-    <li><span class="legend-item" style="opacity: {{opacity}}; background: {{allFillColor}}; border-style: solid; border-width: 1px; border-color: {{allBorderColor}};"></span>All</li>
-    <li><span class="legend-item" style="opacity: {{opacity}}; background: {{connectedFillColor}}; border-style: solid; border-width: 1px; border-color: {{connectedBorderColor}};"></span>Connected</li>
-    <li><span class="legend-item" style="opacity: {{opacity}}; background: repeating-linear-gradient(-45deg, {{singleFillColor}}, {{singleFillColor}} 5px, purple 3px, {{singleStripeColor}} 8px); border-style: solid; border-width: 1px; border-color: {{singleBorderColor}};"></span>Single</li>
+    <li>
+      <span class="has-tooltip-arrow has-tooltip-hidden-mobile" data-tooltip="All watersheds">
+        <span class="legend-item" style="opacity: {{opacity}}; background: {{allFillColor}}; border-style: solid; border-width: 1px; border-color: {{allBorderColor}};"></span>
+      </span>
+      All
+    </li>
+    <li>
+      <span class="has-tooltip-arrow has-tooltip-hidden-mobile" data-tooltip="Watersheds connected to marker location">
+        <span class="legend-item" style="opacity: {{opacity}}; background: {{connectedFillColor}}; border-style: solid; border-width: 1px; border-color: {{connectedBorderColor}};"></span>
+      </span>
+      Connected
+    </li>
+    <li>
+      <span class="has-tooltip-arrow has-tooltip-hidden-mobile shifted-tooltip" data-tooltip="Total watershed of highlighted community">
+        <span class="legend-item" style="opacity: {{opacity}}; background: repeating-linear-gradient(-45deg, {{singleFillColor}}, {{singleFillColor}} 5px, purple 3px, {{singleStripeColor}} 8px); border-style: solid; border-width: 1px; border-color: {{singleBorderColor}};"></span>
+      </span>
+      Single
+    </li>
   </ul>
 </div>
