--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -9,10 +9,10 @@
   <p>This site is an interactive map for visualizing Oregon's <u>surface</u> drinking water sources (i.e., water from rivers, streams and lakes), which serve about two-thirds of Oregonians.</p>
   <p>Pick a spot on the map to discover interconnected populations and communities by way of common drinking watersheds. Use the provided basemaps and overlays to customize the view.</p>
   <p>Groundwater sources (i.e., water sourced from deep wells and aquifers) are <u>not</u> included in this map.</p>
-  <h4>Data Sources<span class="is-size-7 has-text-weight-normal"> (As of October 8, 2022)</span></h4>
+  <h4>Data Sources<span class="is-size-7 has-text-weight-normal"> (As of October 22, 2022)</span></h4>
   <ul>
     <li>Oregon Deparment of Environmental Quality (DEQ), <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">Surface water drinking water source areas in Oregon</a></li>
-    <li>Oregon Spatial Data Library, <a href="https://spatialdata.oregonexplorer.info/geoportal/details;id=4b1b008d5a764a209b2df040689c0779" target="_blank">Oregon Watershed Boundary Dataset</a></li>
+    <li>Oregon Spatial Data Library, <a href="https://spatialdata.oregonexplorer.info/geoportal/details;id=161b8e74e7ef457180fba6429c9ee1ee" target="_blank">Oregon Rivers</a>, <a href="https://spatialdata.oregonexplorer.info/geoportal/details;id=4b1b008d5a764a209b2df040689c0779" target="_blank">Oregon Watershed Boundary Dataset</a></li>
     <li>Oregon DEQ, <a href="https://arcgis.deq.state.or.us/arcgis/rest/services/WQ/OregonHydro/MapServer/0" target="_blank">Oregon Hydrography</a></li>
     <li>Oregon Health Authority, <a href="https://yourwater.oregon.gov/index.html" target="_blank">Drinking water data online</a></li>
     <li>Portland State University, <a href="https://www.pdx.edu/population-research/population-estimate-reports" target="_blank">Oregon population estimate reports</a></li>
