--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -1,5 +1,5 @@
 <div class="about content">
-  <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}} BETA</b></span></h3>
+  <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}}</b></span></h3>
   <div>
     <img style="width: 100%; height: 240px; object-fit: cover;" src="../images/message.jpg">
     <div style="margin-top: -25px; padding-right: 8px; text-align: right;"><small><a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">&nbsp;Finetooth CC BY-SA 3.0</a></small></div>
