--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -1,5 +1,5 @@
 <div class="about content">
-  <h3>Oregon Drinking Watersheds <span style="font-size: small;"><b>v{{version}}</b></span></h3>
+  <h3>Oregon Drinking Watersheds <span style="font-size: small;">v{{version}} (Oct 30, 2025)</span></h3>
   <div>
     <img style="width: 100%; height: 240px; object-fit: cover;" src="../images/message.jpg">
     <div style="margin-top: -25px; padding-right: 8px; text-align: right;"><small><a class="license-link" href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" target="_blank">&nbsp;Finetooth CC BY-SA 3.0</a></small></div>
@@ -9,18 +9,23 @@
   <p>This site is an interactive map for visualizing Oregon's <u>surface</u> drinking water sources (i.e., water from rivers, streams and lakes), which serve about two-thirds of Oregonians.</p>
   <p>Pick a spot on the map to discover interconnected populations and communities by way of common drinking watersheds. Use the provided basemaps and overlays to customize the view.</p>
   <p>Groundwater sources (i.e., water sourced from deep wells and aquifers) are <u>not</u> included in this map.</p>
-  <h4>Data Sources<span class="is-size-7 has-text-weight-normal"> (As of October 22, 2022)</span></h4>
+  <small><b>Data Sources</b>
   <ul>
-    <li>Oregon Deparment of Environmental Quality (DEQ), <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">Surface water drinking water source areas in Oregon</a></li>
-    <li>Oregon Spatial Data Library, <a href="https://spatialdata.oregonexplorer.info/geoportal/details;id=161b8e74e7ef457180fba6429c9ee1ee" target="_blank">Oregon Rivers</a>, <a href="https://spatialdata.oregonexplorer.info/geoportal/details;id=4b1b008d5a764a209b2df040689c0779" target="_blank">Oregon Watershed Boundary Dataset</a></li>
-    <li>Oregon DEQ, <a href="https://arcgis.deq.state.or.us/arcgis/rest/services/WQ/OregonHydro/MapServer/0" target="_blank">Oregon Hydrography</a></li>
-    <li>Oregon Health Authority, <a href="https://yourwater.oregon.gov/index.html" target="_blank">Drinking water data online</a></li>
-    <li>Portland State University, <a href="https://www.pdx.edu/population-research/population-estimate-reports" target="_blank">Oregon population estimate reports</a></li>
-    <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations</li>
+    <li>Oregon Deparment of Environmental Quality (DEQ), Surface water drinking water source areas in Oregon; (retrieved Oct 2022)</li>
+    <li>Oregon Spatial Data Library, Oregon Rivers, Oregon Watershed Boundary Dataset; (retrieved Oct 2022)</li>
+    <li>Oregon DEQ, <a href="https://arcgis.deq.state.or.us/arcgis/rest/services/WQ/OregonHydro/MapServer/0" target="_blank">Oregon Hydrography</a> (current)</li>
+    <li>Oregon Health Authority, <a href="https://yourwater.oregon.gov/index.html" target="_blank">Drinking water data online</a>; (retrieved Oct 2022)</li>
+    <li>Portland State University, <a href="https://www.pdx.edu/population-research/population-estimate-reports" target="_blank">Oregon population estimate reports</a>; (retrieved Oct 2022)</li>
+    <li>Warm Springs Water Treatment Plant Community Water System Annual Water Quality Report for 2017; (retrieved Oct 2025)</li>
+    <li>Population data from the US Census Bureau via <a href="https://datausa.io/" target="_blank">Data USA</a>; (retrieved Oct 2025)</li>
+    <li><a href="https://hydro.nationalmap.gov/arcgis/rest/services/wbd/MapServer" target="_blank">USGS Hydrologic Unit (HU) polygon boundaries</a>; (retrieved Oct 2025)</li>
+    <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations (as Oct 2025)</li>
   </ul>
+  </small>
+  <br>
   <small><b>Notes about data quality:</b>
-    <br>
-    <p>Mapping populations to drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map." This was particularly complex to do while avoiding double counting populations. No populations are double counted on this map.</p><p>This layer heavily relies on the original mapping by <a href="https://www.oregon.gov/deq/wq/programs/pages/dwp-maps.aspx" target="_blank">DEQ</a>, however there are several instances where they didn't map the full extent of a community watershed and we have modified it to do so.</p><p>If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
+    <br><br>
+    <p>Mapping populations to drinking watersheds in Oregon can be complex given that some communities have multiple water sources or change their source based on the season. We tried to stay true to the goal of answering the question of "who's drinking water is influenced by any given spot on the map." This was particularly complex to do while avoiding double counting populations. No populations are double counted on this map.</p><p>This layer heavily relies on the original mapping by DEQ, however there are several instances where they didn't map the full extent of a community watershed and we have modified it to do so.</p><p>If you see any inaccuracies, please contact <a href="mailto:ef@oregonwild.org" target="_blank">Erik at Oregon Wild</a> </p>
   </small>
   <br>
   <p>This project is open source and uses open data.</p>
