--- a/src/templates/aboutModal.hbs
+++ b/src/templates/aboutModal.hbs
@@ -19,7 +19,7 @@
     <li>Warm Springs Water Treatment Plant Community Water System Annual Water Quality Report for 2017; (retrieved Oct 2025)</li>
     <li>Population data from the US Census Bureau via <a href="https://datausa.io/" target="_blank">Data USA</a>; (retrieved Oct 2025)</li>
     <li><a href="https://hydro.nationalmap.gov/arcgis/rest/services/wbd/MapServer" target="_blank">USGS Hydrologic Unit (HU) polygon boundaries</a>; (retrieved Oct 2025)</li>
-    <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations (as Oct 2025)</li>
+    <li><a href="http://oregonwild.org/" target="_blank">Oregon Wild</a>, Surface drinking water watershed extent evaluations (as of Oct 2025)</li>
   </ul>
   </small>
   <br>
